--- a/src/pages/assets.astro
+++ b/src/pages/assets.astro
@@ -1,6 +1,16 @@
 ---
-import { Image } from 'astro:assets'
+import { getEntry } from 'astro:content';
+
+import Image from '~/components/Image.astro'
 import localImg from "~/assets/images/placeholder.jpeg"
+
+const post1 = await getEntry('post', 'post-1');
+const post2 = await getEntry('post', 'post-2');
+const post3 = await getEntry('post', 'post-3');
+
+const assetsImg = "~/assets/images/placeholder.jpeg";
+const publicImg = "/public.jpeg"
+const remoteImg = "https://images.unsplash.com/reserve/LJIZlzHgQ7WPSh5KVTCB_Typewriter.jpg"
 ---
 
 <html lang="en">
@@ -14,10 +24,61 @@ import localImg from "~/assets/images/placeholder.jpeg"
 	<body>
 		<h1>Astro Assets</h1>
 
+		<h2>Assets Import <small>(import "{assetsImg}")</small></h2>
 		<Image
 			src={localImg}
 			width={300}
 			alt={"Local Image"}
 		/>
+
+		<h2>Assets String <small>("{assetsImg}")</small></h2>
+		<Image
+			src={assetsImg}
+			width={300}
+			alt={"Local Image"}
+		/>
+
+		<h2>Public Image <small>("{publicImg}")</small></h2>
+		<Image
+			src={publicImg}
+			width={300}
+			height={300}
+			alt={"Local Image"}
+		/>
+
+		<h2>Remote Image <small>("{remoteImg}")</small></h2>
+		<Image
+			src={remoteImg}
+			width={300}
+			height={300}
+			alt={"Remote Image"}
+		/>
+
+		<h2>Post 1 (Assets String)</h2>
+		<Image
+			src={post1.data.image as any}
+			width={300}
+			height={300}
+			alt={"Remote Image"}
+		/>
+		<pre>{JSON.stringify({ title: "Lorem ipsum 1", image: post1.data.image }, null, 2)}</pre>
+
+		<h2>Post 2 (Remote Image)</h2>
+		<Image
+			src={post2.data.image as any}
+			width={300}
+			height={300}
+			alt={"Remote Image"}
+		/>
+		<pre>{JSON.stringify({ title: "Lorem ipsum 2", image: post2.data.image}, null, 2)}</pre>
+
+		<h2>Post 3 (Public Image)</h2>
+		<Image
+			src={post3.data.image as any}
+			width={300}
+			height={300}
+			alt={"Remote Image"}
+		/>
+		<pre>{JSON.stringify({ title: "Lorem ipsum 3", image: post3.data.image }, null, 2)}</pre>
 	</body>
 </html>
