--- a/src/pages/assets.astro
+++ b/src/pages/assets.astro
@@ -1,6 +1,7 @@
 ---
 import { getEntry } from 'astro:content';
 
+// import { Image } from 'astro:assets'
 import Image from '~/components/Image.astro'
 import localImg from "~/assets/images/placeholder.jpeg"
 
@@ -11,6 +12,7 @@ const post3 = await getEntry('post', 'post-3');
 const assetsImg = "~/assets/images/placeholder.jpeg";
 const publicImg = "/public.jpeg"
 const remoteImg = "https://images.unsplash.com/reserve/LJIZlzHgQ7WPSh5KVTCB_Typewriter.jpg"
+const remoteNotCdnImg = "https://cdn.pixabay.com/photo/2017/08/30/13/23/mesh-2697072_1280.png"
 ---
 
 <html lang="en">
@@ -28,25 +30,18 @@ const remoteImg = "https://images.unsplash.com/reserve/LJIZlzHgQ7WPSh5KVTCB_Type
 		<Image
 			src={localImg}
 			width={300}
-			alt={"Local Image"}
+			alt={"Assets Import Image"}
 		/>
 
 		<h2>Assets String <small>("{assetsImg}")</small></h2>
 		<Image
 			src={assetsImg}
 			width={300}
-			alt={"Local Image"}
-		/>
-
-		<h2>Public Image <small>("{publicImg}")</small></h2>
-		<Image
-			src={publicImg}
-			width={300}
 			height={300}
-			alt={"Local Image"}
+			alt={"Assets String Image"}
 		/>
 
-		<h2>Remote Image <small>("{remoteImg}")</small></h2>
+		<h2>Remote Image CDN <small>("{remoteImg}")</small></h2>
 		<Image
 			src={remoteImg}
 			width={300}
@@ -54,12 +49,28 @@ const remoteImg = "https://images.unsplash.com/reserve/LJIZlzHgQ7WPSh5KVTCB_Type
 			alt={"Remote Image"}
 		/>
 
+		<h2>Remote Image not CDN <small>("{remoteNotCdnImg}")</small></h2>
+		<Image
+			src={remoteNotCdnImg}
+			width={300}
+			height={300}
+			alt={"Remote Image not CDN"}
+		/>
+
+		<h2>Public Image <small>("{publicImg}")</small></h2>
+		<Image
+			src={publicImg}
+			width={300}
+			height={300}
+			alt={"Public Image"}
+		/>
+
 		<h2>Post 1 (Assets String)</h2>
 		<Image
 			src={post1.data.image as any}
 			width={300}
 			height={300}
-			alt={"Remote Image"}
+			alt={"Post 1 (Assets String)"}
 		/>
 		<pre>{JSON.stringify({ title: "Lorem ipsum 1", image: post1.data.image }, null, 2)}</pre>
 
@@ -68,7 +79,7 @@ const remoteImg = "https://images.unsplash.com/reserve/LJIZlzHgQ7WPSh5KVTCB_Type
 			src={post2.data.image as any}
 			width={300}
 			height={300}
-			alt={"Remote Image"}
+			alt={"Post 2 (Remote Image)"}
 		/>
 		<pre>{JSON.stringify({ title: "Lorem ipsum 2", image: post2.data.image}, null, 2)}</pre>
 
@@ -77,7 +88,7 @@ const remoteImg = "https://images.unsplash.com/reserve/LJIZlzHgQ7WPSh5KVTCB_Type
 			src={post3.data.image as any}
 			width={300}
 			height={300}
-			alt={"Remote Image"}
+			alt={"Post 3 (Public Image)"}
 		/>
 		<pre>{JSON.stringify({ title: "Lorem ipsum 3", image: post3.data.image }, null, 2)}</pre>
 	</body>
