--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,8 +27,8 @@ const metadata = {
     image={{ src: import('~/assets/images/hero.png'), alt: 'AstroWind Hero Image' }}
   >
     <Fragment slot="title">
-      Free template for <span class="hidden xl:inline">creating websites with</span>
-      <span class="text-accent dark:text-white highlight"> Astro 2.0</span> + Tailwind CSS
+      Nouel's website for <span class="hidden xl:inline">creating </span>
+      <span class="text-accent dark:text-white highlight"> chou and fun</span> + Tailwind CSS
     </Fragment>
 
     <Fragment slot="subtitle">
